Fixed naming conventions, added account summary charts and display

--- a/testing/testingLeaflet.html
+++ b/testing/testingLeaflet.html
@@ -18,7 +18,7 @@
 
   <body>
     <div id="map"></div>
-    <script src="testing_leaflet.js"></script>
+    <script src="testingLeaflet.js"></script>
   </body>
 
 </html>
